--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,10 @@ jobs:
               run: |
                   mkdir isr 
                   cp build/main isr/main
-                  zip -r isr.zip isr
+                  zip -r isr-for-linux.zip isr
             - name: set release version
               run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
             - name: publishing
               run: |
-                  gh release create ${{ env.RELEASE_VERSION }} isr.zip --notes "Auto release by actions"
+                  gh release create ${{ env.RELEASE_VERSION }} isr-for-linux.zip --notes "Auto release by actions"
